--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.30",
     "@mui/material": "^5.15.12",
     "chart.js": "^4.4.2",
+    "html-react-parser": "^5.1.9",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -32,7 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "parcel": "^2.12.0",
+    "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.72.0",
     "vite": "^5.0.8"
